# syedra

./: .gitignore  LICENSE  Makefile  README.md  README.org  index.org  path.sh  release.org  requirements.txt  setup.cfg
docs/: block.org  control.org  core.org  index.org
syedra-control/: Makefile  index.org  pyproject.toml
syedra-control/source/syedra/control/: pid.py
syedra-control/tutorials/: index.org
syedra-control/tutorials/pid/: track.py
syedra-core/: Makefile  index.org  pyproject.toml
syedra-core/docs/: block.org  core.org  fsm.org  index.org
syedra-core/source/syedra/core/: block.py  fsm.py
syedra-core/src/syedra/core/: block.py
syedra-core/tutorials/: index.org
syedra-core/tutorials/ablock/: manual.py  pipeline.py
syedra-core/tutorials/block/: async_explicit.py  async_implicit.py  async_pipeline.py  function.py  manual.py  periodic.py  sink.py  statemachine.py  subsystem.py  wrapper.py
syedra-core/tutorials/fsm/: counter.py  event.py  state.py
syedra-vision/: Makefile  index.org  pyproject.toml
syedra-vision/docs/: index.org
syedra-vision/source/syedra/vision/: camera.py  detect.py  display.py  keyboard.py
syedra-vision/src/syedra/vision/: camera.py  transform.py
syedra-vision/tutorials/: index.org
syedra-vision/tutorials/camera/: capture.py
syedra-vision/tutorials/detect/: blob.py  mask.py
syedra-vision/tutorials/transform/: convert.py  crop.py
syedra/control/: pid.py
syedra/core/: __init__.py  block.py  fsm.py
syedra/vision/: __init__.py  detect.py  display.py  keyboard.py
tutorials/: index.org
tutorials/block/: basic.py  source.py
