[metadata]
name = syedra
version = 0.0.0
description = A Systems Design Framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Haldun Komsuoglu
author_email = haldun.komsuoglu@robolit.com
license = BSD-3-Clause
url = https://github.com/haldunk/syedra

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
  tests
  tutorial

[options.extras_require]
testing =
  unittest