[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["source/"]
include = ["syedra.control"]

[project]
name = "syedra-vision"
version = "0.0.0"
description = "Syedra architecture based controls components"
keywords = ['vision', 'processing pipeline']
requires-python = ">=3.10"
dependencies = [
  "syedra-core",
]

[project.urls]
Repository = "https://github.com/haldunk/syedra.git"
