[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["syedra.core"]

[project]
name = "syedra-core"
version = "0.0.0"
description = "Syedra architecture build primitives"
keywords = ['processing pipeline']
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/haldunk/syedra.git"
